--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+@import 'bootstrap/dist/css/bootstrap.min.css'; 
+:root {
+  --primary-color: #0099cc;
+  --secondary-color:#f4f7f9;
+  --primary-text-color:#323232;
+  --secondary-text-color:#2e4766;
+  --tertiary-text-color:white;
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                                
 }
 
 a {
@@ -14,7 +22,7 @@ a {
 * {
   box-sizing: border-box;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -23,4 +31,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
