--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,16 @@
-@import 'bootstrap/dist/css/bootstrap.min.css'; 
+@import "bootstrap/dist/css/bootstrap.min.css";
 :root {
   --primary-color: #0099cc;
-  --secondary-color:#f4f7f9;
-  --primary-text-color:#323232;
-  --secondary-text-color:#2e4766;
-  --tertiary-text-color:white;
+  --secondary-color: #f4f7f9;
+  --primary-text-color: #323232;
+  --secondary-text-color: #2e4766;
+  --tertiary-text-color: white;
 }
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                                                
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 a {
