--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -21,13 +21,29 @@
     font-weight: 600;
     color: var(--secondary-text-color);
   }
+  .navbar__item {
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      height: 3px;
+      width: 0;
+      left: 0;
+      bottom: -10px;
+      background: var(--tertiary-color);
+    }
+    &:hover::after {
+      color: var(--tertiary-color);
+      width: 100%;
+    }
+  }
   .navbar__login {
     padding: 8px 30px;
     background-color: var(--primary-color);
     color: var(--tertiary-text-color);
     border-radius: 40px;
     &:hover {
-      background-color: #027ba3;
+      background-color: var(--tertiary-color);
     }
   }
 }
