--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,20 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.title-course {
+  background-image: linear-gradient(to bottom, #2980b9, #2c3e50);
+  height: 500px;
+  padding: 50px 200px;
+  width: 100%;
+  border-radius: 35px;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.contain {
+  margin-top: 25px;
 }
-
-* {
-  box-sizing: border-box;
+.first-title {
+  color: white;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.second-title {
+  color: white;
+  text-align: center;
+}
+.enroll {
+  margin-top: 12px;
 }
