--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,10 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 :root {
-  --primary-color: #0099cc;
+  --primary-color: #2980b9;
   --secondary-color: #f4f7f9;
-  --tertiary-color:rgb(8, 136, 182);
+  --tertiary-color: #22638e;
   --primary-text-color: #323232;
-  --secondary-text-color: #2e4766;
+  --secondary-text-color: #2c3e50;
   --tertiary-text-color: white;
 }
 html,
@@ -22,13 +22,3 @@ a {
 * {
   box-sizing: border-box;
 }
-/* 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
