--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,18 @@
 .title-course {
   background-image: linear-gradient(to bottom, #2980b9, #2c3e50);
   height: 500px;
-  padding: 50px 200px;
-  width: 100%;
+  padding: 20px 150px;
+  width: 85%;
   border-radius: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .contain {
   margin-top: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .first-title {
   color: white;
@@ -18,3 +24,14 @@
 .enroll {
   margin-top: 12px;
 }
+.course-name {
+  font-size: 45px;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.second-containter {
+  margin-top: 25px;
+} /* LikeAndDeslikeBtn */ ;
